...
        child: SingleChildScrollView(
          child: Form(
            key: _formKey,
            child: Column(
              children: [
                TextFormField(
                  key: Key('Position'),
                  controller: positionController,
                  decoration: const InputDecoration(labelText: 'Vị trí'),
                  validator: (value) => validateNonEmpty(value!, 'vị trí'),
                ),
                TextFormField(
                  key: Key('Company'),
                  controller: companyController,
                  decoration: const InputDecoration(labelText: 'Công ty'),
                  validator: (value) => validateNonEmpty(value!, 'công ty'),
                ),
                TextFormField(
                  key: Key('Description'),
                  controller: descriptionController,
                  decoration: const InputDecoration(labelText: 'Mô tả'),
                  validator: (value) => validateNonEmpty(value!, 'mô tả'),
                ),
                GestureDetector(
                  onTap: showStartDatePicker,
                  child: AbsorbPointer(
                    key: Key('StartDatePicker'),
                    child: TextFormField(
                      controller: TextEditingController(text: startDate),
                      decoration:
                          const InputDecoration(labelText: 'Ngày bắt đầu'),
                      validator: (value) =>
                          validateDate(value!, 'ngày bắt đầu'),
                    ),
                  ),
                ),
                GestureDetector(
                  onTap: showEndDatePicker,
                  child: AbsorbPointer(
                    key: Key('EndDatePicker'),
                    child: TextFormField(
                      controller: TextEditingController(text: endDate),
                      decoration:
                          const InputDecoration(labelText: 'Ngày kết thúc'),
                      validator: (value) =>
                          validateDate(value!, 'ngày kết thúc'),
                    ),
                  ),
                ),
                const SizedBox(height: 16),
                ElevatedButton(
                  key: Key('ButtonAddExperience'),
                  onPressed: () {
                    if (_formKey.currentState?.validate() ?? false) {
                      postExperienceData();
                    }
                  },
                  style: ElevatedButton.styleFrom(
...
